[4.0] Template: cassiopeia fix card border color to support dark mode browsers
When you enable dark mode (flag setting) on the browser, all websites are showed as dark.

But on the card the color was to white and wasn't showed correctly.

--- a/templates/cassiopeia/scss/_variables.scss
+++ b/templates/cassiopeia/scss/_variables.scss
@@ -4,7 +4,7 @@
 $cassiopeia-template-color-dark:     #112856 !default;
 $cassiopeia-template-color:          #434178 !default;
 $cassiopeia-container-main-bg:       #f2f2f2 !default;
-$cassiopeia-border-color:            #ccc !default;
+$cassiopeia-border-color:            #dee2e6 !default;
 $cassiopeia-box-shadow:              0 0 3px rgba(0,0,0,.04) !default;
 $cassiopeia-block-header-bg:         #f5f5f5 !default;
 $white-offset:                       #fefefe;
